@@ -3211,6 +3211,7 @@ void    affir(GEN x, GEN y);
 void    affrr(GEN x, GEN y);
 GEN     bezout(GEN a, GEN b, GEN *u, GEN *v);
 long    cbezout(long a,long b,long *uu,long *vv);
+GEN     cbrtr_abs(GEN x);
 int     cmpii(GEN x, GEN y);
 int     cmprr(GEN x, GEN y);
 long    dblexpo(double x);
@@ -4349,6 +4350,7 @@ INLINE long   bit_accuracy(long x);
 INLINE double bit_accuracy_mul(long x, double y);
 INLINE long   bit_prec(GEN x);
 INLINE int    both_odd(long x, long y);
+INLINE GEN    cbrtr(GEN x);
 INLINE GEN    cgetc(long x);
 INLINE GEN    cgetalloc(long t, size_t l);
 INLINE GEN    cxcompotor(GEN z, long prec);
